Update post page to list related publications

--- a/_sass/_page.scss
+++ b/_sass/_page.scss
@@ -17,10 +17,13 @@
 }
 
 .page {
+  padding-left: 0.5em;
+  padding-right: 0.5em;
+
   @include breakpoint($large) {
     @include span(9 of 12 last);
     @include prefix(0.5 of 12);
-    @include suffix(2 of 12);
+    @include suffix(0.5 of 12);
   }
 
   .page__inner-wrap {
