--- a/_layouts/single.html
+++ b/_layouts/single.html
@@ -60,6 +60,19 @@ layout: default
         {% endif %}
 
         {% if page.link %}<div><a href="{{ page.link }}" class="btn">{{ site.data.ui-text[site.locale].ext_link_label | default: "Direct Link" }}</a></div>{% endif %}
+
+        <!-- Include relevant publications summary -->
+        {% if page.publication_tag %}
+
+          <h2>Publications</h2>
+          <div class="grid__wrapper">
+            {% assign matching_publications = site.publications | where: "tags", page.publication_tag %}
+            {% for post in matching_publications %}
+              {% include archive-single-short-pub.html %}
+              <hr>
+            {% endfor %}
+          </div>
+        {% endif %}
       </section>
 
       <footer class="page__meta">
